feat: P4ADEV-4442 arrange DebtPositionTypeOrgIngestionActivity for SpontaneousForm persistence (#534)