@@ -11,6 +11,7 @@ import it.gov.pagopa.payhub.activities.enums.FileErrorCode;
 import it.gov.pagopa.payhub.activities.mapper.ingestionflow.debtpositiontypeorg.DebtPositionTypeOrgMapper;
 import it.gov.pagopa.payhub.activities.service.files.FileExceptionHandlerService;
 import it.gov.pagopa.payhub.activities.service.ingestionflow.IngestionFlowProcessingService;
+import it.gov.pagopa.payhub.activities.service.ingestionflow.spontaneousform.SpontaneousFormHandlerService;
 import it.gov.pagopa.pu.debtposition.dto.generated.DebtPositionType;
 import it.gov.pagopa.pu.debtposition.dto.generated.DebtPositionTypeOrg;
 import it.gov.pagopa.pu.organization.dto.generated.Organization;
@@ -32,26 +33,29 @@ public class DebtPositionTypeOrgProcessingService extends IngestionFlowProcessin
     private final DebtPositionTypeOrgMapper debtPositionTypeOrgMapper;
     private final DebtPositionTypeOrgService debtPositionTypeOrgService;
     private final DebtPositionTypeService debtPositionTypeService;
+    private final SpontaneousFormHandlerService spontaneousFormHandlerService;
 
     public DebtPositionTypeOrgProcessingService(
-            @Value("${ingestion-flow-files.dp-type-orgs.max-concurrent-processing-rows}") int maxConcurrentProcessingRows,
+        @Value("${ingestion-flow-files.dp-type-orgs.max-concurrent-processing-rows}") int maxConcurrentProcessingRows,
 
-            DebtPositionTypeOrgMapper debtPositionTypeOrgMapper,
-            DebtPositionTypeOrgErrorsArchiverService debtPositionTypeErrorsArchiverService,
-            DebtPositionTypeOrgService debtPositionTypeOrgService, DebtPositionTypeService debtPositionTypeService,
-            OrganizationService organizationService,
-            FileExceptionHandlerService fileExceptionHandlerService) {
+        DebtPositionTypeOrgMapper debtPositionTypeOrgMapper,
+        DebtPositionTypeOrgErrorsArchiverService debtPositionTypeErrorsArchiverService,
+        DebtPositionTypeOrgService debtPositionTypeOrgService, DebtPositionTypeService debtPositionTypeService,
+        OrganizationService organizationService,
+        SpontaneousFormHandlerService spontaneousFormHandlerService,
+        FileExceptionHandlerService fileExceptionHandlerService) {
         super(maxConcurrentProcessingRows, debtPositionTypeErrorsArchiverService, organizationService, fileExceptionHandlerService);
         this.debtPositionTypeOrgMapper = debtPositionTypeOrgMapper;
         this.debtPositionTypeOrgService = debtPositionTypeOrgService;
         this.debtPositionTypeService = debtPositionTypeService;
+        this.spontaneousFormHandlerService = spontaneousFormHandlerService;
     }
 
     public DebtPositionTypeOrgIngestionFlowFileResult processDebtPositionTypeOrg(
-            Iterator<DebtPositionTypeOrgIngestionFlowFileDTO> iterator,
-            List<CsvException> readerException,
-            IngestionFlowFile ingestionFlowFile,
-            Path workingDirectory) {
+        Iterator<DebtPositionTypeOrgIngestionFlowFileDTO> iterator,
+        List<CsvException> readerException,
+        IngestionFlowFile ingestionFlowFile,
+        Path workingDirectory) {
 
         List<DebtPositionTypeOrgErrorDTO> errorList = new ArrayList<>();
         DebtPositionTypeOrgIngestionFlowFileResult ingestionFlowFileResult = new DebtPositionTypeOrgIngestionFlowFileResult();
@@ -77,52 +81,65 @@ public class DebtPositionTypeOrgProcessingService extends IngestionFlowProcessin
 
     @Override
     protected List<DebtPositionTypeOrgErrorDTO> consumeRow(
-            long lineNumber,
-            DebtPositionTypeOrgIngestionFlowFileDTO row,
-            DebtPositionTypeOrgIngestionFlowFileResult ingestionFlowFileResult,
-            IngestionFlowFile ingestionFlowFile) {
-        String ipa = ingestionFlowFileResult.getOrgIpaCode();
-        if (!row.getIpaCode().equalsIgnoreCase(ipa)) {
-            log.error("Organization IPA code {} does not match with the one in the ingestion flow file {}", row.getIpaCode(), ipa);
-            DebtPositionTypeOrgErrorDTO error = buildErrorDto(
-                    ingestionFlowFile, lineNumber, row,
-                    FileErrorCode.ORGANIZATION_IPA_MISMATCH.name(),
-                    FileErrorCode.ORGANIZATION_IPA_MISMATCH.format(row.getIpaCode(), ipa));
-            return List.of(error);
-        }
+        long lineNumber,
+        DebtPositionTypeOrgIngestionFlowFileDTO row,
+        DebtPositionTypeOrgIngestionFlowFileResult ingestionFlowFileResult,
+        IngestionFlowFile ingestionFlowFile) {
+	    String ipa = ingestionFlowFileResult.getOrgIpaCode();
+	    if (!row.getIpaCode().equalsIgnoreCase(ipa)) {
+		    log.error("Organization IPA code {} does not match with the one in the ingestion flow file {}", row.getIpaCode(), ipa);
+		    DebtPositionTypeOrgErrorDTO error = buildErrorDto(
+			    ingestionFlowFile, lineNumber, row,
+			    FileErrorCode.ORGANIZATION_IPA_MISMATCH.name(),
+			    FileErrorCode.ORGANIZATION_IPA_MISMATCH.format(row.getIpaCode(), ipa));
+		    return List.of(error);
+	    }
 
-        DebtPositionTypeOrg existingDebtPosTypeOrg = debtPositionTypeOrgService.getDebtPositionTypeOrgByOrganizationIdAndCode(ingestionFlowFile.getOrganizationId(), row.getCode());
+	    DebtPositionTypeOrg existingDebtPosTypeOrg = debtPositionTypeOrgService.getDebtPositionTypeOrgByOrganizationIdAndCode(ingestionFlowFile.getOrganizationId(), row.getCode());
 
-        if (existingDebtPosTypeOrg != null) {
-            DebtPositionTypeOrgErrorDTO error = buildErrorDto(
-                    ingestionFlowFile, lineNumber, row,
-                    FileErrorCode.DEBT_POSITION_TYPE_ORG_ALREADY_EXISTS.name(),
-                    FileErrorCode.DEBT_POSITION_TYPE_ORG_ALREADY_EXISTS.getMessage());
-            return List.of(error);
-        }
+	    if (existingDebtPosTypeOrg != null) {
+		    DebtPositionTypeOrgErrorDTO error = buildErrorDto(
+			    ingestionFlowFile, lineNumber, row,
+			    FileErrorCode.DEBT_POSITION_TYPE_ORG_ALREADY_EXISTS.name(),
+			    FileErrorCode.DEBT_POSITION_TYPE_ORG_ALREADY_EXISTS.getMessage());
+		    return List.of(error);
+	    }
 
-        List<DebtPositionType> debtPositionTypeList = Objects.requireNonNull(debtPositionTypeService.getByBrokerIdAndCode(ingestionFlowFileResult.getBrokerId(), row.getCode()).getEmbedded()).getDebtPositionTypes();
-        if (CollectionUtils.isEmpty(debtPositionTypeList)) {
-            DebtPositionTypeOrgErrorDTO error = buildErrorDto(
-                    ingestionFlowFile, lineNumber, row,
-                    FileErrorCode.DEBT_POSITION_TYPE_BY_CODE_NOT_FOUND.name(),
-                    FileErrorCode.DEBT_POSITION_TYPE_BY_CODE_NOT_FOUND.format(row.getCode()));
-            return List.of(error);
-        }
-        Long debtPositionTypeId = debtPositionTypeList.getFirst().getDebtPositionTypeId();
+	    List<DebtPositionType> debtPositionTypeList = Objects.requireNonNull(debtPositionTypeService.getByBrokerIdAndCode(ingestionFlowFileResult.getBrokerId(), row.getCode()).getEmbedded()).getDebtPositionTypes();
+	    if (CollectionUtils.isEmpty(debtPositionTypeList)) {
+		    DebtPositionTypeOrgErrorDTO error = buildErrorDto(
+			    ingestionFlowFile, lineNumber, row,
+			    FileErrorCode.DEBT_POSITION_TYPE_BY_CODE_NOT_FOUND.name(),
+			    FileErrorCode.DEBT_POSITION_TYPE_BY_CODE_NOT_FOUND.format(row.getCode()));
+		    return List.of(error);
+	    }
+	    Long debtPositionTypeId = debtPositionTypeList.getFirst().getDebtPositionTypeId();
 
-        debtPositionTypeOrgService.createDebtPositionTypeOrg(debtPositionTypeOrgMapper.map(row, debtPositionTypeId, ingestionFlowFile.getOrganizationId()));
-        return Collections.emptyList();
+
+	    Long spontaneousFormId;
+	    try {
+		    spontaneousFormId = spontaneousFormHandlerService.handleSpontaneousForm(
+			    ingestionFlowFile.getOrganizationId(), row);
+	    } catch (Exception e) {
+		    DebtPositionTypeOrgErrorDTO error = buildErrorDto(
+			    ingestionFlowFile, lineNumber, row,
+			    FileErrorCode.SPONTANEOUS_FORM_PARSING_ERROR.name(),
+			    FileErrorCode.SPONTANEOUS_FORM_PARSING_ERROR.format(row.getSpontaneousFormCode()));
+		    return List.of(error);
+	    }
+
+	    debtPositionTypeOrgService.createDebtPositionTypeOrg(debtPositionTypeOrgMapper.map(row, debtPositionTypeId, ingestionFlowFile.getOrganizationId(), spontaneousFormId));
+	    return Collections.emptyList();
     }
 
     @Override
     protected DebtPositionTypeOrgErrorDTO buildErrorDto(IngestionFlowFile ingestionFlowFile, long lineNumber, DebtPositionTypeOrgIngestionFlowFileDTO row, String errorCode, String message) {
         DebtPositionTypeOrgErrorDTO errorDTO = DebtPositionTypeOrgErrorDTO.builder()
-                .fileName(ingestionFlowFile.getFileName())
-                .rowNumber(lineNumber)
-                .errorCode(errorCode)
-                .errorMessage(message)
-                .build();
+            .fileName(ingestionFlowFile.getFileName())
+            .rowNumber(lineNumber)
+            .errorCode(errorCode)
+            .errorMessage(message)
+            .build();
         if (row != null) {
             errorDTO.setDebtPositionTypeCode(row.getCode());
             errorDTO.setOrganizationId(ingestionFlowFile.getOrganizationId());
